public/css/style.css
body {
  font-family: 'Open Sans',  Tahoma,Arial,Helvetica, Verdana, sans-serif;
  color: #143642;
  background-color: #efefef;
}

.text-center {
  text-align: text-center;
}

a, a:visited {
  color:#006597;
}

h1, h2 {
font-family: 'Montserrat', Trebuchet, Helvetica, Arial, Verdana, sans-serif;
font-weight: 400;
}

h3 {
  font-weight: 400;
  padding-top: .125em;
}

#container {
  padding-top:20px;
  width: 980px;
  border: 1px solid #ededed;
  background: #fff;
  margin-bottom: 20px;
}

header {
  padding: 1em 0 1.5em;
  text-align: center;
}

#main {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  grid-column-gap: 0px;
  grid-row-gap: 0px;
 
}

#user-select {
  grid-area: 1 / 1 / 2 / 3;
  display: flex;
  flex-direction: row;
  justify-content: center;
}

#user-select h3::after{
  content: ':';
  padding-right: 1em;
}

#user-form input {
  
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    color: #495057;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid #ced4da;
    border-radius: .25rem;
    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
    border-bottom-right-radius: 0;
    border-top-right-radius: 0;
}

#user-form button {
  padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    color: #fff;
    background-color:#006597;
    background-clip: padding-box;
    border: 1px solid #ced4da;
    border-radius: .25rem;
    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  border-left: 0;
}

#vis {
  grid-area: 2 / 1 / 3 / 3;
  border-bottom: 1px solid #eee;
  border-top: 1px solid #eee;
}

#status {
  grid-area: 3 / 1 / 4 / 2;
}

#controls {
  grid-area: 3 / 2 / 4 / 3; 
}

#book-title {
  font-family: 'Open Sans',  Tahoma,Arial,Helvetica, Verdana, sans-serif;
  color: #143642;
  font-size: 2.3em;
  text-align: center;
}

#text-select {
  float:right;
  margin-right: 10px;
}

#vis {
  overflow: hidden;
  position: relative;
}

#status {
  padding:0 0 20px 20px;
}

#controls {
  padding: 20px;
  background-color: #eee;
  margin: 10px;
  width: 350px;
}

#bubble-background {
  fill: none;
  pointer-events: all;
}

#interest-input {
  padding-left: 20px;
}

#remove-interest, #add-interest {
  margin-left: 20px;
  margin-right: 20px;
  margin-bottom: 20px;
  font-size: 20px;
}

.input-button {
  margin-left: 20px;
}

.bubble-node {
  /* fill: #d1e0f3; */
  fill: #73b3ca59;
}

.bubble-hover {
  /* fill: #b8c7d9; */
  fill: #E8E9E7;
}

.bubble-selected {
  /* fill: #a8c8ee;  */
  fill: #4e9fbc7c;
  /* stroke: #6081a3; */
  stroke: #4E9EBC;
  stroke-width: 1.5px;
}

.active {
  color: #006597;
}

a.bubble-label {
  font-family: 'Open Sans',  Tahoma,Arial,Helvetica, Verdana, sans-serif;
  color: inherit;
  cursor: pointer;
  display: block;
  text-align: center;
  text-decoration: none;
  line-height: 135%;
  position: absolute;
}


.bubble-label .bubble-label-value {
  font: 11px sans-serif;
  white-space: nowrap;
}

footer p {
  text-align: center;
  padding-top:20px;
  padding-bottom:20px;
  font: 13px sans-serif;
}

